<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="-10dp"
    android:layout_marginLeft="-10dp"
    android:layout_marginRight="-10dp"
    android:layout_marginTop="-10dp"
    android:background="@drawable/gnssbg"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SecondActivity" >

    <RelativeLayout
        android:id="@+id/leftpanel"
        android:layout_width="match_parent"
        android:layout_height="340dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <RelativeLayout
            android:id="@+id/splitpanel"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:background="@layout/shape_border" >

            <ImageView
                android:id="@+id/splitlogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:contentDescription="menu"
                android:src="@drawable/menu"
                android:visibility="gone" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/spinnerpanel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignTop="@id/splitpanel"
            android:layout_marginRight="5dp"
            android:layout_toLeftOf="@id/splitpanel"
            android:background="@layout/shape_border" >

            <ImageView
                android:id="@+id/spinner_logo"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:src="@drawable/logo_beidou" />

            <TextView
                android:id="@+id/spinner_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@id/spinner_logo"
                android:text="@string/GNSS_BEIDOU"
                android:textColor="#FFFFFF" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/menupanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dp"
            android:background="@layout/shape_border"
            android:weightSum="4" >

            <RelativeLayout
                android:id="@+id/Menu_Document"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:background="@android:color/transparent" >

                <TextView
                    android:id="@+id/menu_document_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/menu_document"
                    android:textColor="#FFFFFF" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/Menu_Video"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:background="@android:color/transparent" >

                <TextView
                    android:id="@+id/menu_video_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/menu_video"
                    android:textColor="#FFFFFF" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/Menu_Launch"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:background="@android:color/transparent" >

                <TextView
                    android:id="@+id/menu_launch_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/menu_launch"
                    android:textColor="#FFFFFF" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/Menu_Setting"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_weight="1"
                android:background="@android:color/transparent" >

                <TextView
                    android:id="@+id/menu_setting_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/menu_setting"
                    android:textColor="#FFFFFF" />
            </RelativeLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/RevealColorLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/spinnerpanel"
            android:layout_below="@id/menupanel"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="2dp" >

            <LinearLayout
                android:id="@+id/bottompanel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@layout/shape_border"
                android:orientation="vertical" >

                <ScrollView
                    android:id="@+id/parent_scroll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="none" >

                    <LinearLayout
                        android:id="@+id/selectionpanel"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="5dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:layout_marginTop="5dp"
                        android:orientation="vertical" >
                    </LinearLayout>
                </ScrollView>

                <LinearLayout
                    android:id="@+id/sp_setting"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >
                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rightpanel"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/leftpanel"
        android:layout_marginTop="5dp"
        android:background="@layout/shape_border" >

        <RelativeLayout
            android:id="@+id/Displaypanel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="#000000" >

            <com.joanzapata.pdfview.PDFView
                android:id="@+id/pdfview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="#000000"
                android:visibility="gone" />

            <com.warnyul.android.widget.FastVideoView
                android:id="@+id/videopanel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="false"
                android:layout_alignParentLeft="false"
                android:layout_alignParentRight="false"
                android:layout_alignParentTop="false"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="#000000" />

            <RelativeLayout
                android:id="@+id/GNSSview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="#000" />
            
            <WebView
                android:id="@+id/webpanel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@layout/shape_border"
                android:visibility="gone" />
            
        </RelativeLayout>

        <Button
            android:id="@+id/rightpanel_rotate"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="10dp"
            android:layout_marginRight="10dp"
            android:background="@layout/shape_circle" />
    </RelativeLayout>

</RelativeLayout>
